# python/src/chirpstack_api/as_pb/external/api/device_pb2_grpc.py
@@ -101,6 +101,11 @@ class DeviceServiceStub(object):
                 request_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.ClearDeviceNoncesRequest.SerializeToString,
                 response_deserializer=google_dot_protobuf_dot_empty__pb2.Empty.FromString,
                 )
+        self.GetStatus = channel.unary_unary(
+                '/api.DeviceService/GetStatus',
+                request_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusRequest.SerializeToString,
+                response_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusResponse.FromString,
+                )
 
 
 class DeviceServiceServicer(object):
@@ -232,6 +237,13 @@ class DeviceServiceServicer(object):
         context.set_details('Method not implemented!')
         raise NotImplementedError('Method not implemented!')
 
+    def GetStatus(self, request, context):
+        """Get returns the device status matching the given DevEUI.
+        """
+        context.set_code(grpc.StatusCode.UNIMPLEMENTED)
+        context.set_details('Method not implemented!')
+        raise NotImplementedError('Method not implemented!')
+
 
 def add_DeviceServiceServicer_to_server(servicer, server):
     rpc_method_handlers = {
@@ -319,6 +331,11 @@ def add_DeviceServiceServicer_to_server(servicer, server):
                     servicer.ClearDeviceNonces,
                     request_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.ClearDeviceNoncesRequest.FromString,
                     response_serializer=google_dot_protobuf_dot_empty__pb2.Empty.SerializeToString,
+            ),
+            'GetStatus': grpc.unary_unary_rpc_method_handler(
+                    servicer.GetStatus,
+                    request_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusRequest.FromString,
+                    response_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusResponse.SerializeToString,
             ),
     }
     generic_handler = grpc.method_handlers_generic_handler(
@@ -617,5 +634,22 @@ class DeviceService(object):
         return grpc.experimental.unary_unary(request, target, '/api.DeviceService/ClearDeviceNonces',
             chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.ClearDeviceNoncesRequest.SerializeToString,
             google_dot_protobuf_dot_empty__pb2.Empty.FromString,
+            options, channel_credentials,
+            insecure, call_credentials, compression, wait_for_ready, timeout, metadata)
+
+    @staticmethod
+    def GetStatus(request,
+            target,
+            options=(),
+            channel_credentials=None,
+            call_credentials=None,
+            insecure=False,
+            compression=None,
+            wait_for_ready=None,
+            timeout=None,
+            metadata=None):
+        return grpc.experimental.unary_unary(request, target, '/api.DeviceService/GetStatus',
+            chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusRequest.SerializeToString,
+            chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusResponse.FromString,
             options, channel_credentials,
             insecure, call_credentials, compression, wait_for_ready, timeout, metadata)
